# smartwatch_repo

./: CMakeLists.txt  MAX30102.ioc  README.md  main.cpp
Src/: main.c
bsp/bsp_interface/: CMakeLists.txt
bsp/bsp_interface/include/: bsp.hpp  bsp_clock.hpp  bsp_com.hpp  bsp_led.hpp
bsp/discovery-f407g/: .mxproject  Makefile  discovery-f407g.ioc
bsp/discovery-f407g/Core/Src/: main.c
bsp/esp32/smartwatch_esp_32_app/: smartwatch_esp_32_app.ino
bsp/nucleo-l476rg/: .mxproject  CMakeLists.txt  Makefile  nucleo-l476rg.ioc  toolchain.cmake
bsp/nucleo-l476rg/Core/Inc/: max30100_for_stm32_hal.h
bsp/nucleo-l476rg/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
bsp/nucleo-l476rg/CubeMX/: CMakeLists.txt  nucleo-l476rg.ioc
bsp/nucleo-l476rg/src/: bsp.cpp  bsp_clock.cpp  bsp_com.cpp  bsp_led.cpp
esp-32-app/: CMakeLists.txt  sdkconfig  sdkconfig.old  toolchain.cmake
esp-32-app/components/ble/: CMakeLists.txt
esp-32-app/components/ble/src/: BLEDescriptor.cpp  BLEDescriptor.h
esp-32-app/main/: CMakeLists.txt  main.cpp
esp32-app/: CMakeLists.txt
esp32-app/main/: main.c
sensors/max30100/: CMakeLists.txt
sensors/max30100/include/: max30100.hpp
sensors/max30100/src/: max30100.cpp
sensors/sensor_interface/: CMakeLists.txt
sensors/sensor_interface/include/: sensor_interface.hpp
test/: CMakeLists.txt  hr.xlsx  pulse_detector.c  pulse_detector.h  pulse_detector.m  pulse_detector_test.cpp
test/data/: hr.xlsx  ir_raw.txt
